--- a/femaelsite/star/templates/star/base.html
+++ b/femaelsite/star/templates/star/base.html
@@ -226,6 +226,8 @@
                 <a href="{% url 'home' %}">Главная</a>
                 <a href="{% url 'about' %}">О нас</a>
                 <a href="{% url 'catalog' %}">Рецепты</a>
+                <a href="{% url 'addpage' %}">Добавить рецепт</a>
+                <a href="{% url 'login' %}">login</a>
             </div>
         </nav>
     </header>
