--- a/femaelsite/star/templates/star/index.html
+++ b/femaelsite/star/templates/star/index.html
@@ -257,6 +257,8 @@
                 <a href="">Главная</a>
                 <a href="/about/" > О нас </a>
                 <a href="{% url 'catalog' %}">Рецепты</a>
+                <a href="{% url 'addpage' %}">Добавить рецепт</a>
+                <a href="{% url 'login' %}">login</a>
             </div>
         </nav>
     </header>
@@ -298,6 +300,7 @@
             <a href="#">Главная</a>
             <a href="/about/">О нас</a>
             <a href="/catalog/">Рецепты</a>
+            
 
         </div>
         <p>© 2025 Волшебный Мир. Все права защищены.</p>
