--- a/femaelsite/star/templates/star/base.html
+++ b/femaelsite/star/templates/star/base.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="{% url 'home' %}" class="logo">Игровые рецепты | {{ title }}</a>
+            <a href="{% url 'home' %}" class="logo">The magical world | {{ title }}</a>
             <div class="nav-links">
                 <a href="{% url 'home' %}">Главная</a>
                 <a href="{% url 'about' %}">О нас</a>
