--- a/femaelsite/star/templates/star/index.html
+++ b/femaelsite/star/templates/star/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo">Волшебный Мир | {{ title }}</a>
+            <a href="#" class="logo">The magical world | {{ title }}</a>
             <div class="nav-links">
                 <a href="">Главная</a>
                 <a href="/about/" > О нас </a>
