--- a/femaelsite/star/templates/star/catalog.html
+++ b/femaelsite/star/templates/star/catalog.html
@@ -33,7 +33,7 @@
                 <div class="preparation">
                     <h3 >Способ приготовления:</h3>
                     <p>{{ recipe.preparation }}</p>
-                    <a href="{% url 'recipe' recipe.id %}" class="details-btn">
+                    <a href="{{ recipe.get_absolute_url }}" class="details-btn">
                         <span>Подробнее</span>
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
