--- a/femaelsite/star/templates/star/base.html
+++ b/femaelsite/star/templates/star/base.html
@@ -17,7 +17,7 @@
                 <a href="{% url 'about' %}">О нас</a>
                 <a href="{% url 'catalog' %}">Рецепты</a>
                 <a href="{% url 'addpage' %}">Добавить рецепт</a>
-                <a href="{% url 'login' %}">login</a>
+                <a href="{% url 'login' %}">Авторизация</a>
             </div>
         </nav>
     </header>
