--- a/femaelsite/users/templates/users/login.html
+++ b/femaelsite/users/templates/users/login.html
@@ -18,6 +18,7 @@
             
             <div class="form-group">
                 <label for="password">Пароль</label>
+                {{ form.password }}
                 <input type="password" id="password" name="password" required>
             </div>
         
