--- a/femaelsite/users/templates/users/login.html
+++ b/femaelsite/users/templates/users/login.html
@@ -10,22 +10,18 @@
         
         <form method="POST" class="auth-form">
             {% csrf_token %}
-            {{form.as_p}}
+            
             <div class="form-group">
-                <label for="username">Имя пользователя</label>
-                <input type="text" id="username" name="username" required>
+                {{ form.username.label_tag }}
+                {{ form.username }}
             </div>
             
             <div class="form-group">
-                <label for="password">Пароль</label>
+                {{ form.password.label_tag }}
                 {{ form.password }}
-                <input type="password" id="password" name="password" required>
             </div>
-        
-            <form method="POST" action="{% url 'home' %}">
             
-                <button type="submit" class="auth-btn">Войти</button>
-            </form>
+            <button type="submit" class="auth-btn">Войти</button>
             
             <div class="auth-links">
                 <a href="">Регистрация</a>
@@ -72,7 +68,8 @@
         color: var(--dark);
     }
     
-    .form-group input {
+    /* Стили для полей ввода */
+    .form-input {
         width: 100%;
         padding: 12px 15px;
         border: 2px solid #eee;
@@ -81,7 +78,7 @@
         transition: border-color 0.3s ease;
     }
     
-    .form-group input:focus {
+    .form-input:focus {
         outline: none;
         border-color: var(--secondary);
     }
