--- a/femaelsite/users/templates/users/login.html
+++ b/femaelsite/users/templates/users/login.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a class="logo">The magical world | {{ title }}</a>
+            <a href="{% url 'home' %}" class="logo">The magical world | {{ title }}</a>
         </nav>
     </header>
 
