--- a/femaelsite/star/templates/star/index.html
+++ b/femaelsite/star/templates/star/index.html
@@ -33,7 +33,7 @@
                         <i class="fas fa-sign-in-alt auth-icon"></i>
                         Войти
                     </a>
-                    <a href="{% url 'users:login' %}" class="auth-btn register-btn">
+                    <a href="{% url 'users:register' %}" class="auth-btn register-btn">
                         <i class="fas fa-user-plus auth-icon"></i>
                         Регистрация
                     </a>
