--- a/femaelsite/users/templates/users/register.html
+++ b/femaelsite/users/templates/users/register.html
@@ -19,7 +19,7 @@
         {% block content %}
         <section class="auth-section">
             <div class="auth-container">
-                <h1 class="auth-title">Вход в систему</h1>
+                <h1 class="auth-title"></h1>
                 
                 <form method="POST" class="auth-form">
                     {% csrf_token %}
@@ -30,15 +30,19 @@
                     </div>
                     
                     <div class="form-group">
-                        {{ form.password.label_tag }}
-                        {{ form.password }}
+                        {{ form.password1.label_tag }}
+                        {{ form.password1 }}
                     </div>
                     
+                    <div class="form-group">
+                        {{ form.password2.label_tag }}
+                        {{ form.password2 }}
+                    </div>
                     <button type="submit" class="auth-btn">Войти</button>
                     
                     <div class="auth-links">
-                        <a href="{% url 'users:register' %}">Регистрация</a>
-                        <a href="">Забыли пароль?</a>
+                        <a href=" {% url 'users:login' %}">Войти</a>
+                        <a href=""></a>
                     </div>
                 </form>
             </div>
