--- a/femaelsite/users/templates/users/register_done.html
+++ b/femaelsite/users/templates/users/register_done.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title>Вход</title>
     <link type="text/css" href="{% static 'star/css/style.css' %}" rel="stylesheet">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
     <header>
         <nav>
-            <a href="{% url 'home' %}" class="logo">The magical world | {{ title }}</a>
+            <a href="{% url 'home' %}" class="logo">The magical world | Вход</a>
         </nav>
     </header>
 
@@ -19,26 +19,16 @@
         {% block content %}
         <section class="auth-section">
             <div class="auth-container">
-                <h1 class="auth-title">Вход в систему</h1>
+                <h1 class="auth-title"></h1>
                 
                 <form method="POST" class="auth-form">
                     {% csrf_token %}
-                    
-                    <div class="form-group">
-                        {{ form.username.label_tag }}
-                        {{ form.username }}
-                    </div>
-                    
-                    <div class="form-group">
-                        {{ form.password.label_tag }}
-                        {{ form.password }}
-                    </div>
-                    
-                    <button type="submit" class="auth-btn">Войти</button>
-                    
+                   
+                    <!-- <button type="submit" class="auth-btn">Войти</button> -->
+
                     <div class="auth-links">
-                        <a href="{% url 'users:register' %}">Регистрация</a>
-                        <a href="">Забыли пароль?</a>
+                        <p>Нажмите <a href=" {% url 'users:login' %}">Войти</a> чтобы совершить вход в систему.</p>
+                        <a href=""></a>
                     </div>
                 </form>
             </div>
