--- a/femaelsite/users/templates/users/register.html
+++ b/femaelsite/users/templates/users/register.html
@@ -30,8 +30,8 @@
                     </div>
                     
                     <div class="form-group">
-                        {{ form.password1.label_tag }}
-                        {{ form.password1 }}
+                        {{ form.password.label_tag }}
+                        {{ form.password }}
                     </div>
                     
                     <div class="form-group">
