--- a/femaelsite/users/templates/users/password_change_form.html
+++ b/femaelsite/users/templates/users/password_change_form.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title>Изменение пароля</title>
     <link type="text/css" href="{% static 'star/css/style.css' %}" rel="stylesheet">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
     <header>
         <nav>
-            <a href="{% url 'home' %}" class="logo">The magical world | {{ title }}</a>
+            <a href="{% url 'home' %}" class="logo">The magical world | Изменение пароля</a>
         </nav>
     </header>
 
@@ -19,26 +19,28 @@
         {% block content %}
         <section class="auth-section">
             <div class="auth-container">
-                <h1 class="auth-title">Вход в систему</h1>
+                <h1 class="auth-title"></h1>
                 
                 <form method="POST" class="auth-form">
                     {% csrf_token %}
-                    
                     <div class="form-group">
-                        {{ form.username.label_tag }}
-                        {{ form.username }}
+                        {{ form.old_password.label_tag }}
+                        {{ form.old_password }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.new_password1.label_tag }}
+                        {{ form.new_password1 }}
                     </div>
                     
                     <div class="form-group">
-                        {{ form.password.label_tag }}
-                        {{ form.password }}
+                        {{ form.new_password2.label_tag }}
+                        {{ form.new_password2 }}
                     </div>
-                    
-                    <button type="submit" class="auth-btn">Войти</button>
+                    <button type="submit" class="auth-btn">Изменить пароль</button>
                     
                     <div class="auth-links">
-                        <a href="{% url 'users:register' %}">Регистрация</a>
-                        <a href="{% url 'users:password_change' %}">Забыли пароль?</a>
+                        <a href=" {% url 'home' %}">На главную</a>
+                        <a href=""></a>
                     </div>
                 </form>
             </div>
